--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "laravel/framework": "^6.6.0",
-        "backpack/crud": "^4.0.22"
+        "backpack/crud": "^4.0.22",
+        "spatie/laravel-permission": "^3.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
